--- a/lib/auth/sia/Makefile.am
+++ b/lib/auth/sia/Makefile.am
@@ -12,8 +12,12 @@ DEFS = @DEFS@
 ## unconditionally build shared libraries, and it does not allow us to
 ## link with non-installed libraries
 
-L =					\
-	$(LIB_kafs)					\
+if KRB4
+KAFS=$(top_builddir)/lib/kafs/.libs/libkafs.a
+endif
+
+L = \
+	$(KAFS)						\
 	$(top_builddir)/lib/krb5/.libs/libkrb5.a	\
 	$(top_builddir)/lib/asn1/.libs/libasn1.a	\
 	$(LIB_krb4)					\
