we need libdl when linking with libpam on some systems (eg PHT TL), so do it on all as it seems harmless

--- a/source/configure.in
+++ b/source/configure.in
@@ -1101,7 +1101,7 @@ AC_ARG_WITH(pam,
   yes)
     AC_MSG_RESULT(yes)
     AC_DEFINE(WITH_PAM)
-    LIBS="$LIBS -lpam"
+    LIBS="$LIBS -lpam -ldl"
     ;;
   *)
     AC_MSG_RESULT(no)
