--- a/appl/ftp/ftpd/Makefile.am
+++ b/appl/ftp/ftpd/Makefile.am
@@ -49,5 +49,5 @@ LDADD = ../common/libcommon.a \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/otp/libotp.la \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
-	@LIB_crypt@ $(DBLIB)
+	$(LIB_roken) \
+	$(DBLIB)
