--- a/appl/login/Makefile.am
+++ b/appl/login/Makefile.am
@@ -13,5 +13,5 @@ LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(LIB_security)
