--- a/appl/push/Makefile.am
+++ b/appl/push/Makefile.am
@@ -23,5 +23,5 @@ EXTRA_DIST = pfrom.in $(man_MANS)
 LDADD = $(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(LIB_hesiod)
