--- a/appl/rsh/Makefile.am
+++ b/appl/rsh/Makefile.am
@@ -16,4 +16,4 @@ LDADD = $(LIB_kafs) \
 	$(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la
+	$(LIB_roken)
