--- a/appl/test/Makefile.am
+++ b/appl/test/Makefile.am
@@ -26,4 +26,4 @@ gssapi_client_LDADD = $(top_builddir)/lib/gssapi/libgssapi.la $(LDADD)
 LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
-	$(top_builddir)/lib/roken/libroken.la
+	$(LIB_roken)
