--- a/kadmin/Makefile.am
+++ b/kadmin/Makefile.am
@@ -21,7 +21,7 @@ COMMON_LDADD = \
 	$(top_builddir)/lib/asn1/libasn1.la \
 	$(top_builddir)/lib/sl/libsl.la \
 	$(LIB_readline) \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(DBLIB)
 
 kadmind_LDADD = $(top_builddir)/lib/kadm5/libkadm5srv.la $(COMMON_LDADD)
