--- a/kuser/Makefile.am
+++ b/kuser/Makefile.am
@@ -22,7 +22,7 @@ kauth_LDADD = \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
-	$(top_builddir)/lib/roken/libroken.la
+	$(LIB_roken)
 
 kinit_LDADD	= $(kauth_LDADD)
 
@@ -34,4 +34,4 @@ LDADD = \
 	$(top_builddir)/lib/krb5/libkrb5.la \
  	$(top_builddir)/lib/des/libdes.la \
  	$(top_builddir)/lib/asn1/libasn1.la \
- 	$(top_builddir)/lib/roken/libroken.la
+	$(LIB_roken)
