--- a/lib/kadm5/Makefile.am
+++ b/lib/kadm5/Makefile.am
@@ -95,7 +95,7 @@ LDADD = \
 	$(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(DBLIB)
 
 CLEANFILES = kadm5_err.c kadm5_err.h
