--- a/appl/afsutil/Makefile.am
+++ b/appl/afsutil/Makefile.am
@@ -14,4 +14,4 @@ LDADD = $(LIB_kafs) \
 	$(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la
+	$(LIB_roken)
