--- a/appl/ftp/ftp/Makefile.am
+++ b/appl/ftp/ftp/Makefile.am
@@ -40,5 +40,5 @@ LDADD = \
 	$(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(LIB_readline)
