--- a/appl/otp/Makefile.am
+++ b/appl/otp/Makefile.am
@@ -10,5 +10,5 @@ otpprint_SOURCES = otpprint.c otp_locl.h
 LDADD = \
 	$(top_builddir)/lib/otp/libotp.la \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(DBLIB)
