--- a/appl/xnlock/Makefile.am
+++ b/appl/xnlock/Makefile.am
@@ -19,5 +19,5 @@ LDADD = \
 	$(LIB_krb5) \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(X_LIBS) -lXt $(X_PRE_LIBS) -lX11 $(X_EXTRA_LIBS)
