--- a/kpasswd/Makefile.am
+++ b/kpasswd/Makefile.am
@@ -21,4 +21,4 @@ kpasswdd_LDADD = \
 LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
-	$(top_builddir)/lib/roken/libroken.la
+	$(LIB_roken)
