--- a/lib/otp/Makefile.am
+++ b/lib/otp/Makefile.am
@@ -6,7 +6,7 @@ noinst_PROGRAMS = otptest
 
 otptest_LDADD = libotp.la \
 	$(top_builddir)/lib/des/libdes.la \
-	$(top_builddir)/lib/roken/libroken.la \
+	$(LIB_roken) \
 	$(DBLIB)
 
 include_HEADERS = otp.h
