--- a/configure.in
+++ b/configure.in
@@ -231,8 +231,9 @@ AC_CHECK_HEADERS(netinet/in.h netinet/in6.h netinet/in6_var.h)
 AC_CHECK_HEADERS(netinet/in6_machtypes.h netinet/in_systm.h)
 AC_CHECK_HEADERS(netinet/ip.h netinet/tcp.h netinfo/ni.h netinet6/in6.h)
 AC_CHECK_HEADERS(paths.h pty.h pwd.h)
-AC_CHECK_HEADERS(io.h resolv.h)
-AC_CHECK_HEADERS(rpcsvc/dbm.h sac.h sgtty.h shadow.h siad.h signal.h stropts.h)
+AC_CHECK_HEADERS(io.h resolv.h rpcsvc/dbm.h)
+AC_CHECK_HEADERS(sac.h security/pam_modules.h sgtty.h shadow.h siad.h)
+AC_CHECK_HEADERS(signal.h stropts.h)
 AC_CHECK_HEADERS(sys/bitypes.h sys/category.h sys/file.h sys/filio.h)
 AC_CHECK_HEADERS(sys/ioccom.h sys/ioctl.h)
 AC_CHECK_HEADERS(sys/param.h sys/proc.h sys/pty.h sys/ptyio.h)
