--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -855,6 +855,9 @@
 /* Define if you have the <utime.h> header file.  */
 #undef HAVE_UTIME_H
 
+/* Define if you have the dl library (-ldl).  */
+#undef HAVE_LIBDL
+
 /* Define if you have the inet library (-linet).  */
 #undef HAVE_LIBINET
 
