--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -149,5 +149,5 @@ make-roken.c: roken.h.in roken.awk
 
 print_version.lo: print_version.h
 
-print_version.h: make-print-version
+print_version.h: make-print-version $(top_builddir)/include/version.h
 	./make-print-version print_version.h
