it's probably make-print-version.o that should depend on version.h
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5953 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -149,5 +149,7 @@ make-roken.c: roken.h.in roken.awk
 
 print_version.lo: print_version.h
 
-print_version.h: make-print-version $(top_builddir)/include/version.h
+print_version.h: make-print-version
 	./make-print-version print_version.h
+
+make-print-version.o: $(top_builddir)/include/version.h
