include strsep prototype if needed
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5968 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -187,7 +187,7 @@ char * strlwr(char *);
 int strnlen(char*, int);
 #endif
 
-#ifndef HAVE_STRSEP
+#if !defined(HAVE_STRSEP) || defined(NEED_STRSEP_PROTO)
 char *strsep(char**, const char*);
 #endif
 
