--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -246,6 +246,9 @@ RPCTORTURE_OBJ = utils/rpctorture.o \
 
 DEBUG2HTML_OBJ = utils/debug2html.o ubiqx/debugparse.o
 
+SMBFILTER_OBJ = utils/smbfilter.o $(LIBSMB_OBJ) $(PARAM_OBJ) \
+                 $(UBIQX_OBJ) $(LIB_OBJ)
+
 PROTO_OBJ = $(SMBD_OBJ) $(NMBD_OBJ) $(SWAT_OBJ) $(CLIENT_OBJ) \
 	    $(RPCCLIENT_OBJ) $(SMBWRAPPER_OBJ)
 
@@ -265,6 +268,8 @@ smbtorture : CHECK bin/smbtorture
 rpctorture : CHECK bin/rpctorture
 
 debug2html : CHECK bin/debug2html
+
+smbfilter : CHECK bin/smbfilter
 
 .SUFFIXES:
 .SUFFIXES: .c .o .po .po32
@@ -410,6 +415,10 @@ bin/rpctorture: $(RPCTORTURE_OBJ) bin/.dummy
 bin/debug2html: $(DEBUG2HTML_OBJ) bin/.dummy
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(DEBUG2HTML_OBJ) $(LDFLAGS) $(LIBS)
+
+bin/smbfilter: $(SMBFILTER_OBJ) bin/.dummy
+	@echo Linking $@
+	@$(CC) $(FLAGS) -o $@ $(SMBFILTER_OBJ) $(LDFLAGS) $(LIBS)
 
 bin/smbwrapper.so: $(PICOBJS)
 	@echo Linking shared library $@
