--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -270,6 +270,9 @@ DEBUG2HTML_OBJ = utils/debug2html.o $(PARAM_OBJ) $(LIB_OBJ)
 SMBTORTURE_OBJ = utils/torture.o $(LIBSMB_OBJ) $(PARAM_OBJ) \
                  $(UBIQX_OBJ) $(LIB_OBJ)
 
+SMBFILTER_OBJ = utils/filter.o $(LIBSMB_OBJ) $(PARAM_OBJ) \
+                 $(UBIQX_OBJ) $(LIB_OBJ)
+
 RPCTORTURE_OBJ = utils/rpctorture.o \
              rpcclient/display.o \
              rpcclient/cmd_lsarpc.o \
@@ -298,6 +301,9 @@ smbwrapper : CHECK bin/smbsh bin/smbwrapper.so @WRAP32@
 smbtorture : CHECK bin/smbtorture
 
 rpctorture : CHECK bin/rpctorture
+
+smbfilter : CHECK bin/smbfilter
+
 
 .SUFFIXES:
 .SUFFIXES: .c .o .po .po32
@@ -435,6 +441,10 @@ bin/smbtorture: $(SMBTORTURE_OBJ) bin/.dummy
 bin/rpctorture: $(RPCTORTURE_OBJ) bin/.dummy
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(RPCTORTURE_OBJ) $(LDFLAGS) $(LIBS)
+
+bin/smbfilter: $(SMBFILTER_OBJ) bin/.dummy
+	@echo Linking $@
+	@$(CC) $(FLAGS) -o $@ $(SMBFILTER_OBJ) $(LDFLAGS) $(LIBS)
 
 bin/debug2html: $(DEBUG2HTML_OBJ) bin/.dummy
 	@echo Linking $@
