(LDADD): add kafs
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5996 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/login/Makefile.am
+++ b/appl/login/Makefile.am
@@ -8,8 +8,8 @@ bin_PROGRAMS = login
 login_SOURCES = login.c osfc2.c read_string.c utmp_login.c utmpx_login.c \
 	tty.c stty_default.c login_locl.h
 
-
-LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
+LDADD = $(LIB_kafs) \
+	$(top_builddir)/lib/krb5/libkrb5.la \
 	$(LIB_krb4) \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
