(kpasswdd_LDADD): add LIB_dlopen
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6019 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kpasswd/Makefile.am
+++ b/kpasswd/Makefile.am
@@ -16,6 +16,7 @@ kpasswdd_LDADD = \
 	$(top_builddir)/lib/kadm5/libkadm5srv.la \
 	$(top_builddir)/lib/hdb/libhdb.la \
 	$(LDADD) \
+	$(LIB_dlopen) \
 	$(DBLIB)
 
 LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
