--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -137,7 +137,7 @@ RPC_PARSE_OBJ = rpc_parse/parse_lsa.o rpc_parse/parse_misc.o \
                 rpc_parse/parse_reg.o rpc_parse/parse_rpc.o \
                 rpc_parse/parse_samr.o rpc_parse/parse_srv.o \
                 rpc_parse/parse_wks.o rpc_parse/parse_sec.o \
-		rpc_parse/parse_svc.o
+                rpc_parse/parse_svc.o rpc_parse/parse_at.o
 
 RPC_CLIENT_OBJ = \
 		rpc_client/cli_login.o    \
@@ -148,7 +148,8 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_wkssvc.o   \
 		rpc_client/cli_srvsvc.o   \
 		rpc_client/cli_svcctl.o \
-		rpc_client/cli_samr.o 
+		rpc_client/cli_samr.o   \
+		rpc_client/cli_atsvc.o
 
 
 LOCKING_OBJ = locking/locking.o locking/locking_shm.o locking/locking_slow.o \
@@ -165,8 +166,8 @@ SAMPASSDB_OBJ = passdb/sampassdb.o passdb/sampass.o passdb/sampassldap.o passdb/
 
 PASSDB_OBJ = passdb/passdb.o passdb/smbpassfile.o passdb/smbpass.o \
              passdb/pass_check.o passdb/ldap.o passdb/nispass.o \
-		passdb/smbpasschange.o passdb/mysqlpass.o \
-		lib/util_pwdb.o lib/domain_namemap.o lib/sids.o
+             passdb/smbpasschange.o passdb/mysqlpass.o \
+             lib/util_pwdb.o lib/domain_namemap.o lib/sids.o
 
 PROFILE_OBJ = profile/profile.o
 
@@ -241,6 +242,7 @@ RPCCLIENT_OBJ = rpcclient/rpcclient.o \
              rpcclient/cmd_srvsvc.o \
              rpcclient/cmd_svcctl.o \
              rpcclient/cmd_netlogon.o \
+             rpcclient/cmd_atsvc.o \
              $(PARAM_OBJ) $(LIBSMB_OBJ) $(UBIQX_OBJ) $(LIB_OBJ) \
              $(RPC_CLIENT_OBJ) $(RPC_PARSE_OBJ) $(PASSDB_OBJ)
 
