--- a/configure.in
+++ b/configure.in
@@ -318,6 +318,14 @@ AC_CHECK_HEADERS([\
 	utmpx.h					\
 ])
 
+AC_ARG_ENABLE(netinfo,
+[  --enable-netinfo      enable netinfo for configuration lookup])
+
+if test "$ac_cv_header_netinfo_ni_h" = yes -a "$enable_netinfo" = yes; then
+       AC_DEFINE(HAVE_NETINFO, 1,
+               [Define if you want to use Netinfo instead of krb5.conf.])
+fi
+
 AM_CONDITIONAL(have_err_h, test "$ac_cv_header_err_h" = yes)
 AM_CONDITIONAL(have_fnmatch_h, test "$ac_cv_header_fnmatch_h" = yes)
 
