--- a/kadmin/Makefile.am
+++ b/kadmin/Makefile.am
@@ -2,7 +2,7 @@
 
 include $(top_srcdir)/Makefile.am.common
 
-INCLUDES += $(INCLUDE_readline)
+INCLUDES += $(INCLUDE_readline) $(INCLUDE_krb4)
 
 sbin_PROGRAMS = kadmin
 
@@ -12,7 +12,14 @@ kadmin_SOURCES = 						\
 	ank.c cpw.c del.c dump.c ext.c get.c init.c kadmin.c	\
 	load.c mod.c rename.c util.c kadmin_locl.h
 
-kadmind_SOURCES = kadmind.c kadmin_locl.h
+if KRB4
+KRB4LIB = $(LIB_krb4)
+version4_c = version4.c
+endif
+
+kadmind_SOURCES = kadmind.c server.c kadmin_locl.h $(version4_c)
+
+EXTRA_kadmind_SOURCES = version4.c
 
 COMMON_LDADD = \
 	$(top_builddir)/lib/hdb/libhdb.la \
@@ -24,7 +31,8 @@ COMMON_LDADD = \
 	$(LIB_roken) \
 	$(DBLIB)
 
-kadmind_LDADD = $(top_builddir)/lib/kadm5/libkadm5srv.la $(COMMON_LDADD)
+kadmind_LDADD = $(KRB4LIB) $(top_builddir)/lib/kadm5/libkadm5srv.la \
+	$(COMMON_LDADD)
 kadmin_LDADD = \
 	$(top_builddir)/lib/kadm5/libkadm5clnt.la \
 	$(top_builddir)/lib/kadm5/libkadm5srv.la \
