Added "oplock break wait time" parameter to help with Win9x oplock related problems. Default set to 10ms. Also documented it :-). Jeremy.

--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -645,6 +645,9 @@
 /* Define if you have the syscall function.  */
 #undef HAVE_SYSCALL
 
+/* Define if you have the usleep function.  */
+#undef HAVE_USLEEP
+
 /* Define if you have the utime function.  */
 #undef HAVE_UTIME
 
