(strndup): test for
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6153 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -466,8 +466,9 @@ AC_BROKEN(chown daemon err errx fchown flock fnmatch)
 AC_BROKEN(getcwd getdtablesize gethostname geteuid getgid getegid)
 AC_BROKEN(getopt getusershell inet_aton initgroups iruserok lstat memmove)
 AC_BROKEN(mkstemp putenv rcmd readv setegid setenv seteuid)
-AC_BROKEN(strcasecmp strncasecmp strdup strerror strftime strlwr strnlen)
-AC_BROKEN(strsep strtok_r strupr swab unsetenv verr verrx vsyslog)
+AC_BROKEN(strcasecmp strncasecmp strdup strerror strftime strlwr)
+AC_BROKEN(strndup strnlen strsep strtok_r strupr)
+AC_BROKEN(swab unsetenv verr verrx vsyslog)
 AC_BROKEN(vwarn vwarnx warn warnx writev)
 
 AC_NEED_PROTO([#include <stdlib.h>], setenv)
