(*_SOURCES): remove encdata, add krb[45].c, context.c (LDADD): add krb5
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6180 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/kx/Makefile.am
+++ b/appl/kx/Makefile.am
@@ -19,7 +19,9 @@ kx_SOURCES = \
 	kx.c \
 	kx.h \
 	common.c \
-	encdata.c \
+	context.c \
+	krb4.c \
+	krb5.c \
 	$(XauWriteAuth_c)
 
 EXTRA_kx_SOURCES = writeauth.c
@@ -28,7 +30,9 @@ kxd_SOURCES = \
 	kxd.c \
 	kx.h \
 	common.c \
-	encdata.c \
+	context.c \
+	krb4.c \
+	krb5.c \
 	$(XauWriteAuth_c)
 
 EXTRA_kxd_SOURCES = writeauth.c
@@ -47,16 +51,10 @@ tenletxr: tenletxr.in
 	sed -e "s!%bindir%!$(bindir)!" $(srcdir)/tenletxr.in > $@
 	chmod +x $@
 
-encdata.c:
-	$(LN_S) $(srcdir)/../kauth/encdata.c .
-kauth.h:
-	$(LN_S) $(srcdir)/../kauth/kauth.h .
-
-$(OBJECTS): kauth.h
-
 LDADD = \
 	$(LIB_kafs)				\
+	$(LIB_krb5) \
 	$(LIB_krb4)				\
 	$(top_builddir)/lib/des/libdes.la	\
 	$(LIB_roken)				\
-	$(LIB_XauReadAuth) $(X_PRE_LIBS) $(X_EXTRA_LIBS)
+	$(X_LIBS) $(LIB_XauReadAuth) $(X_PRE_LIBS) $(X_EXTRA_LIBS)
