--- a/appl/Makefile.am
+++ b/appl/Makefile.am
@@ -5,5 +5,5 @@ include $(top_srcdir)/Makefile.am.common
 if OTP
 dir_otp = otp
 endif
-SUBDIRS = afsutil ftp login $(dir_otp) popper push rsh su telnet test
-# kauth kx
+SUBDIRS = afsutil ftp login $(dir_otp) popper push rsh su telnet test kx
+# kauth
