--- a/configure.in
+++ b/configure.in
@@ -35,6 +35,10 @@ case "$host" in
 	;;
 esac
 
+AC_CYGWIN
+AC_OBJEXT
+AC_EXEEXT
+
 test -z "$CFLAGS" && CFLAGS="-g"
 
 dnl Checks for programs.
@@ -412,7 +416,7 @@ AC_SUBST(DBLIB)dnl
 AC_CHECK_FUNCS(_getpty _scrsize asnprintf asprintf fcntl)
 AC_CHECK_FUNCS(getlogin)
 AC_CHECK_FUNCS(getmsg getrlimit getspnam getspuid gettimeofday getuid)
-AC_CHECK_FUNCS(grantpt innetgr mktime ptsname rand random)
+AC_CHECK_FUNCS(grantpt mktime ptsname rand random)
 AC_CHECK_FUNCS(revoke select setitimer setlogin setpcred setpgid)
 AC_CHECK_FUNCS(setregid setresgid setresuid setreuid setutent)
 AC_CHECK_FUNCS(setsid setsockopt sigaction strstr)
@@ -489,8 +493,9 @@ fi
 
 AC_BROKEN(chown daemon err errx fchown flock fnmatch)
 AC_BROKEN(getcwd getdtablesize gethostname geteuid getgid getegid)
-AC_BROKEN(getopt getusershell inet_aton initgroups iruserok lstat memmove)
-AC_BROKEN(mkstemp putenv rcmd readv setegid setenv seteuid)
+AC_BROKEN(getopt getusershell)
+AC_BROKEN(inet_aton initgroups innetgr iruserok lstat memmove)
+AC_BROKEN(mkstemp putenv rcmd readv recvmsg sendmsg setegid setenv seteuid)
 AC_BROKEN(strcasecmp strncasecmp strdup strerror strftime strlwr)
 AC_BROKEN(strndup strnlen strsep strtok_r strupr)
 AC_BROKEN(swab unsetenv verr verrx vsyslog)
