link hpropd with kdb
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@6227 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/kdc/Makefile.am
+++ b/kdc/Makefile.am
@@ -43,6 +43,15 @@ hprop_LDADD = \
 	$(LIB_roken) \
 	$(DBLIB) 
 
+hpropd_LDADD = \
+	$(top_builddir)/lib/hdb/libhdb.la \
+	$(top_builddir)/lib/krb5/libkrb5.la \
+	$(LIB_kdb) $(LIB_krb4) \
+	$(top_builddir)/lib/des/libdes.la \
+	$(top_builddir)/lib/asn1/libasn1.la \
+	$(LIB_roken) \
+	$(DBLIB) 
+
 LDADD = $(top_builddir)/lib/hdb/libhdb.la \
 	$(top_builddir)/lib/krb5/libkrb5.la \
 	$(LIB_krb4) \
